# tinyID

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.toml  docker-compose.yml
api/id_generator/v1/: id_generator.proto
api/user/v1/: user.proto
app/helloworld/: Cargo.toml
app/helloworld/src/: error.rs  lib.rs
app/helloworld/src/biz/: mod.rs  user_demo.rs
app/helloworld/src/core/: core.rs  mod.rs
app/helloworld/src/data/: hello_world.rs  mod.rs  rpc.rs
app/helloworld/src/server/: middleware.rs  middleware_optimal.rs  router.rs  server.rs
app/helloworld/src/service/: error_handling.rs  hello_world.rs  json_response_examples.rs  mod.rs  response.rs
app/user/: Cargo.toml
app/user/src/: error.rs  main.rs
app/user/src/biz/: mod.rs  models.rs  user_usecase.rs
app/user/src/data/: repository.rs
app/user/src/service/: mod.rs  user_service.rs
docker/: helloworld-service.Dockerfile  user-service.Dockerfile
docs/: axum_json_best_practices.md  design.md  tracing_design_comparison.md  tracing_setup.md
libs/shared/: Cargo.toml  build.rs
libs/shared/src/: config.rs  error.rs  lib.rs  proto.rs  traces.rs  traces_optimal.rs
scripts/: req_mock.py  start-all-services.sh  start-helloworld-service.sh  start-user-service.sh  stop-all-services.sh
src/: error.rs  lib.rs
src/biz/: hello_world.rs  mod.rs  user_demo.rs
src/config/: config.rs
src/core/: core.rs
src/data/: hello_world.rs  mod.rs  rpc.rs  user.rs
src/metric/: metric.rs  metrics.rs  mod.rs  tracing.rs
src/server/: middleware.rs  mod.rs  router.rs  server.rs
src/service/: hello_world.rs  mod.rs  user_demo.rs
