[package]
name = "tinyid"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
# 高性能序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 服务框架
axum = "0.8"
http = "1.3.0"
# 配置管理
config = "0.15"
dotenvy = "0.15"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json", "registry"] }
once_cell = "1.21"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 原子操作
crossbeam = "0.8"
# 随机数生成
rand = "0.8"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"


[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[[example]]
name = "response_usage"
path = "examples/response_usage.rs"
