[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
# 内部依赖
shared = { path = "../../libs/shared" }

# 从workspace继承的依赖
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
