[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# 从workspace继承依赖
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }

# trace
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
